Remove script that manually fixes permissions of tar.gz files
As it turns out, just changing the locale is enough to make Maven include the permissions:
See http://jira.codehaus.org/browse/PLXCOMP-207